# flexman

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  _config.yml  index.md
.github/workflows/: documentation.yml  macos.yml  ubuntu.yml  windows.yml
examples/: fsmlib_support.hpp  malg_support.hpp
examples/tapping/: builder.hpp  defines.hpp  main.cpp  parameters.hpp  plotting.hpp  resources.hpp  search.hpp
include/flexman/: flexman.hpp  logging.hpp  serialization.hpp
include/flexman/core/: manager.hpp  mode.hpp  mode_execution.hpp  pareto_front.hpp  result.hpp  solution.hpp
include/flexman/data_structure/: manager.hpp  mode.hpp  mode_execution.hpp  pareto_front.hpp  result.hpp  solution.hpp
include/flexman/pso/: common.hpp  optimize.hpp
include/flexman/search/: common.hpp  search.hpp
include/flexman/simulation/: common.hpp  simulate.hpp
